--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -328,6 +328,7 @@ body {
   align-items: center;
   padding: 4px;
   border-bottom: solid 0.5px rgb(118, 118, 118);
+  box-sizing: border-box;
 }
 
 /* .header-level-container {
@@ -359,6 +360,7 @@ body {
   color: white;
   position: relative;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 
@@ -390,21 +392,45 @@ body {
   display: flex;
   flex-direction: column;
   padding-top: 20px;
+  box-sizing: border-box;
+  justify-content: center;
+  
 }
 
 .profile-row-1 {
   display: flex;
   flex-direction: row;
-  height: 20vh;
+  padding-top: 20px;
   overflow-y: hidden;
+  box-sizing: border-box;
 }
 
 .profile-row-2 {
   display: flex;
+  padding-left: 10px;
   flex-direction: row;
   justify-content: left;
   align-items: center;
-  padding-left: 10px;
+  box-sizing: border-box;
+}
+
+.profile-row-3 {
+  display: flex;
+  flex-direction: row;
+  overflow-y: hidden;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.profile-row-4 {
+  display: flex;
+  flex-direction: row;
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
 .profile-avatar-container {
@@ -413,6 +439,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .profile-name-container {
@@ -435,6 +462,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  width: 100%;
 }
 
 .profile-exp-bar {
@@ -1029,6 +1057,7 @@ body {
   margin-right: 12px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(105, 37, 0, 0.35);
+  
 }
 
 .ws-letter-grid-container {
@@ -1263,6 +1292,14 @@ body {
   color: #ffffff !important;
   border-bottom-color: #0e7c3b !important;
 }
+
+.app-button.failed {
+  background-color: #d32424 !important;
+  color: #ffffff !important;
+  border-bottom-color: #7c0e0e !important;
+}
+
+
 .app-button.success:hover { background-color: #139a4c !important; }
 
 .app-button.info {
@@ -1350,16 +1387,16 @@ outline: none;
 }
 
 
+/* MASCOT PROFILE SELECTOR */
+
 .mascot-profile-selection-container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  row-gap: 8px;
-  justify-content: space-evenly;
+  gap: 4px;
+  justify-content: center;
   align-items: center;
-  padding: 20px;
-  width: 100%;
-  box-sizing: border-box;
 }
 
 .mascot-button {
@@ -1367,15 +1404,105 @@ outline: none;
   width: 50px;
   border: solid 1px black;
   border-radius: 5px;
-  padding: 4px;
+  padding: 8px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  z-index: 1000;
 }
 
 .mascot-button.selected {
   background-color: #d1d7df;
 
+}
+
+
+/* STORE */
+.store-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 30px;
+  padding-bottom: 60px;
+  padding-left: 10px;
+  padding-right: 10px;
+  overflow: hidden;
+}
+
+.store-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px;
+}
+
+.store-selection {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.store-mascot-button {
+  height: 50px;
+  width: 50px;
+  border: solid 1px black;
+  border-radius: 5px;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.store-request-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5); /* semi-transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* ensure it's above page content */
+}
+
+.store-request-modal-container {
+  position: absolute;
+  top: 20%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  z-index: 1000;
+}
+
+.store-request-modal-card {
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 60%;
+  border-radius: 15px;
+}
+
+.store-request-coin-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; 
+  align-items: center;
 }
