--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -43,7 +43,9 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  
+  box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.5);
+  opacity: 95%;
+  background-color: var(--theme-light-blue);
 }
 
 .leave-button-row {
@@ -67,174 +69,6 @@ body {
   justify-content: center;
 }
 
-
-/* MASCOT */
-.mascot-container {
-  height: 100px;
-  width: 100px;
-  
-  min-height: 100px;
-  min-width: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.mascot-body {
-  background-color: #ecc05a;
-  border-radius: 100%;
-  height: 70%;
-  width: 100%;
-  border-color: rgb(197, 111, 111);
-  border-style: solid;
-  border-top: 0px;
-  border-bottom: 5px;
-  border-right: 0px;
-  border-left: 0px;
-  display: flex;
-  flex-direction: column;
-  gap: 5%;
-  align-items: center;
-  justify-content: center;
-}
-
-.mascot-ear-container {
-  position: relative;
-  top: 8px;
-  display: flex;
-  height: 20%;
-  flex-direction: row;
-  gap: 25%;
-  width: 100%;
-  justify-content: center;
-}
-
-.mascot-ear {
-  height: 100%;
-  width: 15%;
-  border-radius: 15px;
-  border: none;
-  background-color: #000;
-  z-index: 4;
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  box-shadow: inset 0 -5px 0 #ecc05a;
-}
-
-.mascot-eyes {
-  display: flex;
-  flex-direction: row;
-  gap: 5%;
-  height: 12%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  z-index: 5;
-}
-  
-.mascot-eye {
-  background-color: black;
-  border-radius: 80%;
-  width: 8%;
-  height: 100%;
-  border-color: white;
-  border-width: 5px;
-  border-style: solid;
-
-} 
-
-.mascot-nose {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 25%;
-  height: 15%;
-  margin: 2px 0;
-}
-
-.mascot-nose.small {
-  width: 20%;
-  height: 12%;
-}
-
-.mascot-nose.medium {
-  width: 25%;
-  height: 15%;
-}
-
-.mascot-nose.large {
-  width: 30%;
-  height: 18%;
-}
-
-.mascot-nose-bridge {
-  width: 60%;
-  height: 40%;
-  background-color: #b78e2f;
-  border-radius: 50% 50% 0 0;
-  /* border: 2px solid #000000; */
-  border-bottom: none;
-  position: relative;
-  z-index: 2;
-}
-
-.mascot-nose-tip {
-  width: 80%;
-  height: 60%;
-  background-color: #b78e2f;
-  border-radius: 50% 50% 50% 50%;
-  /* border: 2px solid #000000; */
-  position: relative;
-  z-index: 1;
-  margin-top: -2px;
-}
-
-.mascot-nostrils {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  justify-content: space-between;
-  width: 60%;
-  z-index: 3;
-}
-
-.mascot-nostril {
-  width: 25%;
-  height: 30%;
-  background-color: #2c1810;
-  border-radius: 50%;
-  border: 1px solid #1a0f0a;
-}
-
-.mascot-mouth-container {
-  position: relative;
-  top: 0px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  align-items: center;
-  height: 10%;
-}
-
-.mascot-mouth {
-  border-radius: 100%;
-  width: 10%;
-  background-color: #ecc05a;
-  height: 100%;
-  border-bottom: #000 solid 2px;
-  transition: width 0.3s;
-}
-
-.mascot-mouth.speaking {
-  margin-top: 3px;
-  background-color: #ecc05a;
-  width: 20%;
-  border-bottom: #000 solid 5px;
-}
 
 /* SIMPLE CARD */
 .simple-card-container {
@@ -318,16 +152,19 @@ body {
   position: fixed;
   width: 100%;
   z-index: 10;
+  
 }
 
 .top-header-container {
   display: flex;
-  background-color: #ffffff;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   width: 100%;
   justify-content: right;
   align-items: center;
   padding: 4px;
-  border-bottom: solid 0.5px rgb(118, 118, 118);
+  /* border-bottom: solid 0.5px rgb(118, 118, 118); */
+  opacity: 80%;
   box-sizing: border-box;
 }
 
@@ -391,7 +228,7 @@ body {
 .profile-container {
   display: flex;
   flex-direction: column;
-  padding-top: 20px;
+  padding-top: 10px;
   box-sizing: border-box;
   justify-content: center;
   
@@ -477,7 +314,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--theme-light-blue);
-  padding-top: 20px;
+  padding-top: 30px;
 }
 
 .game-menu-item-container {
@@ -1389,6 +1226,18 @@ outline: none;
 
 /* MASCOT PROFILE SELECTOR */
 
+.mascot-container {
+  height: 100px;
+  width: 100px;
+  
+  min-height: 100px;
+  min-width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .mascot-profile-selection-container {
   box-sizing: border-box;
   display: flex;
@@ -1423,14 +1272,15 @@ outline: none;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 90vh;
   width: 100%;
   box-sizing: border-box;
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 60px;
   padding-left: 10px;
   padding-right: 10px;
   overflow: hidden;
+  background-color: var(--theme-light-blue);
 }
 
 .store-header {
@@ -1450,19 +1300,28 @@ outline: none;
   gap: 4px;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 10px;
+  background-color: var(--theme-light-blue);
+  border-radius: 15px;
+  /* box-shadow: 0 4px 18px rgba(0, 0, 0, 0.08); */
+
 }
 
 
 .store-mascot-button {
   height: 50px;
   width: 50px;
-  border: solid 1px black;
+  /* border: solid 1px black; */
+  background-color: var(--theme-light-blue);
   border-radius: 5px;
   padding: 8px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.18);
 }
 
 .store-request-modal-overlay {
@@ -1495,7 +1354,7 @@ outline: none;
   align-items: center;
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: var(--theme-light-blue);
   width: 60%;
   border-radius: 15px;
 }
