--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -43,9 +43,10 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 -1px 2px rgba(23, 23, 23, 0.5);
   opacity: 95%;
   background-color: var(--theme-light-blue);
+  z-index: 1000;
 }
 
 .leave-button-row {
@@ -73,7 +74,10 @@ body {
 /* SIMPLE CARD */
 .simple-card-container {
   /* min-height: 150px; */
+  position: relative;
   width: 100%;
+  max-width: 500px;
+  min-width: 250px;
   overflow: hidden;
   border-radius: 12px;
   /* background: linear-gradient(to right, #8e7ee7, rgb(168, 192, 229), #8e7ee7); */
@@ -81,6 +85,14 @@ body {
   background-color: white;
   border-bottom: solid 8px rgb(186, 186, 186);
 }
+
+.favorite-button-container {
+  z-index: 100;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
 
 .simple-card-button {
   padding: 10px;
@@ -96,6 +108,8 @@ body {
 .simple-card-number {
   width: 70px;
   height: 70px;
+  min-width: 70px;
+  min-height: 70px;
   justify-content: center;
   align-content: center;
   border-radius: 5px;
@@ -105,11 +119,13 @@ body {
 }
 
 .simple-card-content {
+  box-sizing: border-box;
   flex-direction: column;
   display: flex;
   justify-content: left;
   flex: 1;
-  margin-left: 10px;
+  margin-left: 5px;
+  padding-right: 60px;
   height: 100%;
   background-color: white;
 }
@@ -130,6 +146,8 @@ body {
   padding-right: 10px;
   padding-top: 30px;
   background-color: var(--theme-light-blue);
+  justify-content: center;
+  align-items: center;
 
 }
 
@@ -146,12 +164,13 @@ body {
 
 
 
+
 /* TOP HEADER */
 
 .top-header-outer-container {
   position: fixed;
   width: 100%;
-  z-index: 10;
+  z-index: 1000;
   
 }
 
