--- a/spanish-app/src/App.css
+++ b/spanish-app/src/App.css
@@ -460,7 +460,7 @@ body {
   margin-right:12px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(105, 37, 0, 0.5);
-  overflow: hidden;
+  overflow: scroll;
 }
 
 /* TEXT RESPONSE */
@@ -576,9 +576,27 @@ body {
 
 
 /**************************** CONVERSATIONS **************************/
+.conversation-card {
+  box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 82vh;
+  background-color: white;
+  box-shadow: #2f3542;
+  margin-bottom: 40px;
+  margin-top: 45px;
+  margin-left: 12px;
+  margin-right:12px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(105, 37, 0, 0.5);
+  overflow-y: hidden;
+}
+
 .conversation-component-outer-container{
   width: 100%;
-  height: 100%;
+  height: 95%;
+  padding-bottom: 5px;
   overflow: hidden;
 }
 
@@ -634,8 +652,6 @@ body {
   flex-direction: row;
   padding: 4px;
   border-radius: 5px;
-  width: 60%;
-  
 }
 
 .conversation-message-left {
@@ -647,6 +663,9 @@ body {
   flex-direction: row;
   padding: 4px;
   border-radius: 5px;
+}
+
+.conversation-message-big {
   width: 60%;
 }
 
